--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -140,6 +140,51 @@ sidebarsearchitemrow {
   color: @accent_fg_color;
 }
 
+messagedocument > label.sender-text {
+  margin-bottom: 3px;
+}
+
+messagedocument > box {
+  padding: 9px;
+  transition: 200ms;
+}
+
+messagedocument > box > button {
+  background: @accent_color;
+  color: @window_bg_color;
+  min-width: 40px;
+  min-height: 40px;
+}
+
+messagedocument.outgoing > box > button {
+  background: @accent_fg_color;
+  color: @accent_bg_color;
+}
+
+messagedocument > box:not(.activatable) > button:hover {
+  background: mix(@accent_color, currentColor, 0.2);
+}
+
+messagedocument.outgoing > box:not(.activatable) > button:hover {
+  background: mix(@accent_fg_color, currentColor, 0.2);
+}
+
+messagedocument>box:not(.activatable)>button:active {
+  background: mix(@accent_color, currentColor, 0.3);
+}
+
+messagedocument.outgoing>box:not(.activatable)>button:active {
+  background: mix(@accent_fg_color, currentColor, 0.3);
+}
+
+messagedocument > box.activatable:hover {
+  background: alpha(currentColor, 0.1);
+}
+
+messagedocument > box.activatable:active {
+  background: alpha(currentColor, 0.2);
+}
+
 messagemedia .media-picture {
   margin: 2px;
   border-radius: 10px;
@@ -150,7 +195,7 @@ messagemedia.with-caption .media-picture {
   border-radius: 10px 10px 4px 4px;
 }
 
-messagemedia progressbar>trough {
+messagemedia progressbar > trough {
   border: 1px solid alpha(black, 0.4);
   min-width: 100px;
 }
@@ -164,7 +209,7 @@ messagelabel {
   margin: 6px 9px;
 }
 
-messagelabel > messageindicators {
+messagelabel > messageindicators, messagedocument > box messageindicators {
   opacity: 0.7;
 }
 
