--- a/data/resources/ui/content-message-document.ui
+++ b/data/resources/ui/content-message-document.ui
@@ -21,10 +21,6 @@
     </child>
     <child>
       <object class="GtkBox">
-        <property name="margin-start">6</property>
-        <property name="margin-end">6</property>
-        <property name="margin-top">6</property>
-        <property name="margin-bottom">6</property>
         <property name="spacing">6</property>
         <child>
           <object class="GtkButton" id="file_status">
@@ -33,8 +29,6 @@
               <class name="osd" />
             </style>
             <property name="valign">center</property>
-            <property name="height-request">50</property>
-            <property name="width-request">50</property>
             <property name="icon-name">window-close-symbolic</property>
           </object>
         </child>
@@ -48,9 +42,8 @@
                 <style>
                   <class name="heading" />
                 </style>
-                <property name="halign">start</property>
+                <property name="xalign">0</property>
                 <property name="ellipsize">middle</property>
-                <property name="label">file_name.jpg</property>
               </object>
             </child>
             <child>
@@ -58,8 +51,7 @@
                 <style>
                   <class name="caption" />
                 </style>
-                <property name="halign">start</property>
-                <property name="label">100 KB</property>
+                <property name="xalign">0</property>
               </object>
             </child>
             <child>
