--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -148,8 +148,8 @@ sidebarsearchitemrow {
   color: @accent_fg_color;
 }
 
-messagedocument > box {
-  margin-right: 6px;
+messagedocument>box {
+  padding: 9px;
 }
 
 messagedocument > box > button {
@@ -157,7 +157,6 @@ messagedocument > box > button {
   color: @window_bg_color;
   min-width: 40px;
   min-height: 40px;
-  margin: 6px;
 }
 
 messagedocument.outgoing > box > button {
@@ -189,7 +188,7 @@ messagelabel {
   margin: 6px 9px;
 }
 
-messagelabel > messageindicators {
+messagelabel > messageindicators, messagedocument > box messageindicators {
   opacity: 0.7;
 }
 
