Implement animated stickers (not for pr)

--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -221,6 +221,11 @@ messagemedia overlay > messageindicators, messagesticker messageindicators {
   margin: 6px;
 }
 
+messagesticker image.animation {
+  min-width: 208px;
+  min-height: 208px;
+}
+
 .event-row {
   font-size: smaller;
   padding: 3px;
