--- a/data/resources/ui/sidebar-row.ui
+++ b/data/resources/ui/sidebar-row.ui
@@ -34,6 +34,9 @@
           <object class="GtkBox">
             <property name="spacing">6</property>
             <child>
+              <object class="GtkImage" id="prefix_icon"/>
+            </child>
+            <child>
               <object class="GtkLabel" id="title_label">
                 <property name="hexpand">True</property>
                 <property name="ellipsize">end</property>
