--- a/data/resources/ui/sidebar-search.ui
+++ b/data/resources/ui/sidebar-search.ui
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?xml-model href="ui-schema.dtd"?>
 <interface>
   <template class="SidebarSearch" parent="GtkWidget">
     <child>
@@ -39,7 +40,8 @@
                         </property>
                         <property name="factory">
                           <object class="GtkBuilderListItemFactory">
-                            <property name="bytes"><![CDATA[
+                            <property name="bytes">
+                              <![CDATA[
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="GtkListItem">
@@ -53,7 +55,8 @@
     </property>
   </template>
 </interface>
-                            ]]></property>
+                            ]]>
+                            </property>
                           </object>
                         </property>
                         <style>
