--- a/data/resources/ui/sidebar.ui
+++ b/data/resources/ui/sidebar.ui
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?xml-model href="ui-schema.dtd"?>
 <interface>
   <menu id="primary_menu">
     <section>
@@ -88,7 +89,8 @@
                     </property>
                     <property name="factory">
                       <object class="GtkBuilderListItemFactory">
-                        <property name="bytes"><![CDATA[
+                        <property name="bytes">
+                          <![CDATA[
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="GtkListItem">
@@ -101,7 +103,8 @@
     </property>
   </template>
 </interface>
-                        ]]></property>
+                        ]]>
+                        </property>
                       </object>
                     </property>
                     <style>
