--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -162,13 +162,7 @@ messagebubble.document .file {
   margin: 3px 0;
 }
 
-messagebubble.document .sender-text-red,
-.sender-text-orange,
-.sender-text-violet,
-.sender-text-green,
-.sender-text-cyan,
-.sender-text-blue,
-.sender-text-pink {
+messagebubble.document .sender {
   margin-bottom: 3px;
 }
 
@@ -200,7 +194,7 @@ messagebubble.document .file:active > overlay > image {
 }
 
 messagebubble.document .file.with-thumbnail > overlay > image {
-  background-color: #00000090;
+  background-color: alpha(black, 0.6);
   color: white;
 }
 
@@ -211,7 +205,18 @@ messagebubble.document .file.with-thumbnail > overlay {
 
 messagebubble.document .file.with-thumbnail > overlay > picture {
   border-radius: 6px;
-  opacity: 1;
+}
+
+messagebubble.document .file > overlay > picture {
+  transition: filter 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+messagebubble.document .file.with-thumbnail:hover > overlay > picture {
+  filter: brightness(1.04);
+}
+
+messagebubble.document .file.with-thumbnail:active > overlay > picture {
+  filter: brightness(1.08);
 }
 
 messagebubble.media .media-picture {
