--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -118,6 +118,7 @@ sidebarsearchitemrow {
 listview.chat-history {
   background: transparent;
   padding: 3px 0;
+  background-color: transparent;
 }
 
 listview.chat-history > row {
@@ -131,7 +132,7 @@ button.scroll-to-bottom {
 }
 
 messagebubble {
-  background: alpha(currentColor, 0.08);
+  background: alpha(white, 0.8);
   border-radius: 15px;
 }
 
@@ -317,7 +318,10 @@ messagesticker {
 .event-row {
   font-size: smaller;
   font-weight: bold;
-  padding: 3px;
+  background-color: alpha(@view_fg_color, 0.2);
+  color: white;
+  border-radius: 9999px;
+  padding: 3px 6px;
 }
 
 .sender-text-red {
