chat-history: Add pattern to background

--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -140,6 +140,7 @@ button.scroll-to-bottom {
 }
 
 messagebubble {
+  /* don't forget to edit pattern shader if change opacity */
   background: alpha(white, 0.8);
   border-radius: 15px;
 }
