--- a/data/resources/style-dark.css
+++ b/data/resources/style-dark.css
@@ -2,8 +2,9 @@
   background-color: @dark_2;
 }
 
-messagebubble {
-  background: #303030;
+messagebubble:not(.outgoing) {
+  /* don't forget to edit pattern shader if change opacity */
+  background: alpha(#303030, 0.9);
 }
 
 .chat-list row .unread-count-muted {
