--- a/data/resources/style-dark.css
+++ b/data/resources/style-dark.css
@@ -3,8 +3,13 @@
 }
 
 messagebubble:not(.outgoing) {
-  /* don't forget to edit pattern shader if change opacity */
+  /* don't forget to edit the pattern shader if change opacity */
   background: alpha(#303030, 0.9);
+}
+
+.event-row {
+  /* don't forget to edit the pattern shader if change opacity */
+  background-color: alpha(#404040, 0.8);
 }
 
 .chat-list row .unread-count-muted {
