--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -146,7 +146,7 @@ button.scroll-to-bottom {
 }
 
 messagebubble {
-  /* don't forget to edit pattern shader if change opacity */
+  /* don't forget to edit the pattern shader if change opacity */
   background: alpha(white, 0.8);
   border-radius: 15px;
 }
@@ -331,9 +331,10 @@ messagesticker {
 }
 
 .event-row {
+  /* don't forget to edit the pattern shader if change opacity */
+  background-color: alpha(black, 0.2);
   font-size: smaller;
   font-weight: bold;
-  background-color: alpha(@view_fg_color, 0.2);
   color: white;
   border-radius: 9999px;
   padding: 3px 6px;
